<resources>
    <string name="app_name">AS Vaidik</string>
    <string name="as_vaidik_pvt_ltd">AS Vaidik Pvt Ltd.</string>
    <string name="image">image</string>
    <string name="home">Home</string>
    <string name="add">add</string>
    <string name="profile">Profile</string>
    <string name="blank" />
    <string name="fab">fab</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="location">Location</string>
    <string name="select_the_type">Select the type</string>
    <string name="android_application">Android Application</string>
    <string name="website">Website</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="choose_the_categories_you_want_to_have">Choose the categories you want to have</string>
    <string name="pooja">Pooja</string>
    <string name="pooja_accessories">Pooja Accessories</string>
    <string name="havan_samagri">Havan Samagri</string>
    <string name="pandits">Pandits</string>
    <string name="astrologer">Astrologer</string>
    <string name="description">Description</string>
    <string name="your_requirements">Your Requirements</string>
    <string name="requirements">Requirements</string>
    <string name="as_vaidik">AS Vaidik</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in_to_your_account">Sign In To Your Account</string>
    <string name="dont_have_an_account">Dont Have an Account?</string>
    <string name="create_your_new_account">Create Your New Account</string>
    <string name="alex">Alex</string>
    <string name="as_vaidik_provides_better_softwares_according_to_you_needs_satisfied_with_their_work">As Vaidik Provides Better Software According to your needs, Satisfied With Their Work.</string>
    <string name="testimonials">Testimonials</string>
    <string name="confirm">Confirm</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="about_us">About Us</string>
    <string name="noida_india">Noida, India</string>
    <string name="your_message">Your Message</string>
    <string name="_917376826652">+917376826652</string>
    <string name="shuklasatyam456_gmail_com">shuklasatyam456@gmail.com</string>
</resources>