<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".ReqActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/reqtool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:foregroundGravity="center"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:buttonGravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="#FFFFFF"
        app:titleTextColor="#FFFFFF">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingEnd="16dp"
            android:text="@string/requirements"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="14dp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqtool">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/maitree_medium"
                android:text="@string/name"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/background_textbox"
                android:ems="10"
                android:hint="@string/blank"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/maitree_medium"
                android:text="@string/email"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/background_textbox"
                android:ems="10"
                android:hint="@string/blank"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/maitree_medium"
                android:text="@string/phone_number"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/cphone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/background_textbox"
                android:ems="10"
                android:hint="@string/blank"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/maitree_medium"
                android:text="@string/location"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/background_textbox"
                android:ems="10"
                android:hint="@string/blank"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/maitree_medium"
                android:text="@string/select_the_type"
                android:textColor="#000000"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/check_androidapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:text="@string/android_application" />

            <CheckBox
                android:id="@+id/check_website"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="-10dp"
                android:layout_marginEnd="50dp"
                android:text="@string/website" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/maitree_medium"
                android:text="@string/choose_the_categories_you_want_to_have"
                android:textColor="#000000"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/pooja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:text="@string/pooja" />

            <CheckBox
                android:id="@+id/poojaacces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:text="@string/pooja_accessories" />

            <CheckBox
                android:id="@+id/havan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:text="@string/havan_samagri" />

            <CheckBox
                android:id="@+id/pandit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:text="@string/pandits" />

            <CheckBox
                android:id="@+id/astrologer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:text="@string/astrologer" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/maitree_medium"
                android:text="@string/description"
                android:textColor="#000000"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:autofillHints=""
                android:background="@drawable/background_textbox"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:padding="10dp" />

            <Button
                android:id="@+id/nextbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/background_button"
                android:gravity="center"
                android:text="@string/submit"
                android:textColor="@color/white"
                app:backgroundTint="@color/master"
                app:iconTint="@color/ic_launcher_background" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>