<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ContactActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView19"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/background_heading"
                android:fontFamily="@font/maitree_medium"
                android:gravity="center"
                android:paddingTop="50dp"
                android:paddingBottom="100dp"
                android:text="@string/as_vaidik"
                android:textColor="#FFFFFF"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/background_card"
                android:elevation="20dp"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="50dp"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout

                    android:id="@+id/user_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/textView27"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/your_message"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_msg"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:inputType="textLongMessage|textEmailAddress"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/msgbtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="50dp"
                        android:text="@string/submit"
                        android:textColor="#FFFFFF" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textView32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="50dp"
                android:text="@string/noida_india"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="46dp"
                android:contentDescription="@string/image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:srcCompat="@drawable/placeholder" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/_917376826652"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/textView32" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView6"
                app:srcCompat="@drawable/phone" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/shuklasatyam456_gmail_com"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toBottomOf="@+id/textView33" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView7"
                app:srcCompat="@drawable/envelope" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>